# cmake

./: .gitignore  CMakeLists.txt  cmake-example.conf  pre_test.sh  run_test.sh
inc/: Palin.hpp  Reverso.hpp  TutorialConfig.hpp.in  mathFunctions.hpp  salut.hpp  students.hpp
inc/cmakeIn/: path.h.in
inc/shared/: salut.hpp
inc/static/: salut.hpp
mathFunctions/: BuildMathTable.cxx  CMakeLists.txt  mathFunctions.hpp  mysqrt.cxx
someGTestExamples/: Addition.cpp  Addition.hpp  CMakeLists.txt  ExampleApp.cpp  Multiply.cpp  Multiply.hpp  makefile  unitTest.cpp
src/: HelloWorld.src  Palin.cpp  Reverso.cpp  boostDepend.cpp  main.cpp  mainapp.cpp  noDepend.cpp  salut.cpp  student.cpp  tutor.cxx  unit_tests.cpp  virtual  virtual.cpp
